--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,26 @@ version: "3.3"
 
 services:
   master: 
-    image: ozlevka/elastic:5.6.3-deb
+    image: ozlevka/shield-elk:latest
     environment:
-      - "ELASTIC_CMD_OPTIONS=--E network.host=_eth2_ --E discovery.zen.ping.unicast.hosts=master"
-    deploy:
-      replicas: 1
-      endpoint_mode: dnsrr
-      placement:
-         constraints:
-            - node.labels.master == yes
+      - "ELASTIC_CMD_OPTIONS=--E network.host=0"
+      - "LOGSTASH_LOG_LEVEL=info"
+    ports:
+      - 9200:9200
+      - 5601:5601
     networks:
-      - elastic
+      - default
+    links:
+      - consul
 
-networks: 
-  elastic:
-    driver: overlay
-    ipam:
-      driver: default
-      config:
-        - subnet: 192.168.0.0/16
+  consul:
+    image: consul:1.0.1
+    command: agent -dev -ui -client=0.0.0.0
+    ports:
+      - 8500:8500
+    networks:
+         - default
+    environment:
+        - "CONSUL_BIND_INTERFACE=eth0"
+networks:
+  default:
